--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,14 @@
 @import "base-undescores-header.scss";
 @import "normalize";
 @import "base-undescores.scss";
+@import "variables.scss";
+@import "global/fonts.scss";
+@import "global/base.scss";
+@import "blocks/site-header.scss";
+@import "blocks/main-navigation.scss";
+@import "blocks/site-main.scss";
+@import "blocks/post-short.scss";
+@import "blocks/site-content.scss";
+@import "blocks/widget-area.scss";
+@import "blocks/site-footer.scss";
+@import "blocks/socials-menu.scss";
