--- a/sass/global/base.scss
+++ b/sass/global/base.scss
@@ -3,6 +3,9 @@
   padding-left: 2rem;
   padding-right: 2rem;
   margin: auto;
+  @media #{$mobile-widths-only} {
+    min-width: 320px;
+  }
 }
 
 .container {
