--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,13 +2,24 @@
 @import "normalize";
 @import "base-undescores.scss";
 @import "variables.scss";
+@import "mixins.scss";
 @import "global/fonts.scss";
+@import "blocks/btn.scss";
 @import "global/base.scss";
 @import "blocks/site-header.scss";
-@import "blocks/main-navigation.scss";
+//@import "blocks/main-navigation.scss";
 @import "blocks/site-main.scss";
 @import "blocks/post-short.scss";
 @import "blocks/site-content.scss";
 @import "blocks/widget-area.scss";
 @import "blocks/site-footer.scss";
 @import "blocks/socials-menu.scss";
+@import "blocks/site-single.scss";
+@import "blocks/breadcrumbs.scss";
+@import "blocks/tag-list.scss";
+@import "blocks/page.scss";
+@import "blocks/contact-form-main.scss";
+@import "blocks/post.scss";
+@import "blocks/search.scss";
+@import "blocks/nav-links.scss";
+@import "blocks/contacts.scss";
