--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -16,3 +16,5 @@ $color-header: #f4f4f4;
 $color-font-main: #676767;
 $color-decor: #00aff2;
 $color-fade: #a7a7a7;
+$color-breadcrumbs: #777777;
+$color-placeholder: #727272;
