--- a/sass/blocks/site-footer.scss
+++ b/sass/blocks/site-footer.scss
@@ -5,12 +5,13 @@
   padding-top: 50px;
   padding-bottom: 66px;
   background-color: #000000;
+  min-width: $screen-mobile;
   .site-info {
     width: 33%;
     font-family: 'LatoBlack', Arial, sans-serif;
     font-size: 2.4rem;
     font-weight: 400;
-    line-height: 1.7rem;
+    line-height: 2.6rem;
     text-transform: uppercase;
   }
   a {
@@ -41,13 +42,13 @@
 
 .site-footer-wrapper {
   background-color: $color-decor;
+  @include container;
 }
 
 .site-footer-bottom {
   position: relative;
   padding-top: 25px;
   padding-bottom: 19px;
-  @include container;
   &::before {
     content: "";
     position: absolute;
