--- a/sass/blocks/site-footer.scss
+++ b/sass/blocks/site-footer.scss
@@ -42,10 +42,10 @@
 
 .site-footer-wrapper {
   background-color: $color-decor;
-  @include container;
 }
 
 .site-footer-bottom {
+  @include container;
   position: relative;
   padding-top: 25px;
   padding-bottom: 19px;
@@ -61,4 +61,8 @@
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
   }
+}
+
+@media #{$mobile-widths-only} {
+  min-width: $screen-mobile;
 }
