--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,3 +23,4 @@
 @import "blocks/search.scss";
 @import "blocks/nav-links.scss";
 @import "blocks/contacts.scss";
+@import "blocks/gallery-page.scss";
